# acvus

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Grammar.md  LICENSE  README.md  Sample.acvus  Spec.md  output.txt
acvus-ast/src/: ast.rs  error.rs  grammar.lalrpop  lexer.rs  lib.rs  parser.rs  substitute.rs  tag_content.rs  token.rs
acvus-chat/: Cargo.toml
acvus-chat-cli/: Cargo.toml
acvus-chat-cli/src/: main.rs  node.rs  project.rs
acvus-chat/src/: error.rs  lib.rs
acvus-cli/: Cargo.toml
acvus-cli/src/: main.rs  project.rs
acvus-cli/src/provider/: anthropic.rs  google.rs  mod.rs  openai.rs
acvus-coroutine/: Cargo.toml
acvus-coroutine/src/: lib.rs
acvus-ext/: Cargo.toml
acvus-ext-llm/: Cargo.toml
acvus-ext-llm/src/: extract.rs  http.rs  lib.rs  message.rs
acvus-ext-llm/src/anthropic/: mod.rs  schema.rs
acvus-ext-llm/src/google/: mod.rs  schema.rs
acvus-ext-llm/src/openai/: mod.rs  schema.rs
acvus-ext/src/: conversion.rs  datetime.rs  deque.rs  encoding.rs  iterator.rs  lib.rs  list.rs  option.rs  regex.rs  sequence.rs  string.rs
acvus-ext/tests/: e2e.rs
acvus-interpreter/: Cargo.toml
acvus-interpreter-test/src/: lib.rs
acvus-interpreter-test/tests/: e2e.rs  extern_fn.rs  script.rs  spawn_eval.rs
acvus-interpreter/src/: blob_journal.rs  builtins.rs  error.rs  executor.rs  extern_fn.rs  interner_ctx.rs  interpreter.rs  iter.rs  journal.rs  lib.rs  storage.rs  value.rs  yielder.rs
acvus-interpreter/src/builtins/: handler.rs  iter.rs  pure.rs  tests.rs
acvus-lsp/: Cargo.toml
acvus-lsp/src/: lib.rs  session.rs
acvus-lsp/tests/: equivalence.rs
acvus-macro/: Cargo.toml
acvus-macro/src/: lib.rs
acvus-mir/: Cargo.toml
acvus-mir-cli/src/: main.rs
acvus-mir-pass/src/: lib.rs
acvus-mir-pass/src/analysis/: mod.rs  reachable_context.rs  storage_dirty.rs  val_def.rs  var_dirty.rs
acvus-mir-pass/src/obfuscate/: cff.rs  opaque.rs  rewriter.rs  scheduler.rs  text_obf.rs
acvus-mir-pass/src/optimize/: const_dedup.rs  mod.rs
acvus-mir-test/src/: lib.rs
acvus-mir-test/tests/: e2e.rs  inline.rs  optimized.rs  optimized_cross_fn.rs  script.rs  user_defined_ty.rs
acvus-mir-test/tests/snapshots/: e2e__arithmetic_to_string.snap  e2e__boolean_not.snap  e2e__builtin_all.snap  e2e__builtin_any.snap  e2e__builtin_contains.snap  e2e__builtin_find.snap  e2e__builtin_fold.snap  e2e__builtin_join.snap  e2e__builtin_len.snap  e2e__builtin_reduce.snap  e2e__builtin_reverse.snap  e2e__catch_all_with_binding.snap  e2e__closure_capture_context.snap  e2e__closure_capture_local.snap  e2e__closure_capture_storage.snap  e2e__comparison_operators.snap  e2e__context_call_expr.snap  e2e__context_call_shorthand.snap  e2e__context_call_simple.snap  e2e__context_field_access.snap  e2e__context_projection_store_1depth.snap  e2e__context_projection_store_2depth.snap  e2e__context_read.snap  e2e__deeply_nested_object_access.snap  e2e__destructure_projection_read.snap  e2e__destructure_projection_shadowing.snap  e2e__destructure_projection_write.snap  e2e__equality_as_match_source.snap  e2e__error_field_access_on_int.snap  e2e__error_storage_write_type_mismatch.snap  e2e__error_tuple_arity_mismatch.snap  e2e__error_undefined_context.snap  e2e__error_variable_write_type_mismatch.snap  e2e__extern_async_call.snap  e2e__extern_fn_object_return.snap  e2e__field_access_on_destructured.snap  e2e__filter_object_field_equality.snap  e2e__iter_list_binding.snap  e2e__iter_object_destructure.snap  e2e__iter_tuple_destructure.snap  (+185 more)
acvus-mir/src/: builtins.rs  cfg.rs  context_registry.rs  error.rs  extern_fn.rs  extern_module.rs  hints.rs  ir.rs  lib.rs  lower.rs  printer.rs  ser_ty.rs  ssa.rs  ssa_pass.rs  test.rs  ty.rs  typeck.rs  user_type.rs  variant.rs
acvus-mir/src/analysis/: cfg.rs  dataflow.rs  domain.rs  domtree.rs  inst_info.rs  liveness.rs  mod.rs  reachable_context.rs  token_liveness.rs  val_def.rs  (+2 more)
acvus-orchestration/: Cargo.toml  blob.rs
acvus-orchestration-test/: Cargo.toml
acvus-orchestration-test/src/: lib.rs
acvus-orchestration-test/tests/: e2e.rs
acvus-orchestration/src/: blob_journal.rs  compile.rs  convert.rs  dag.rs  display.rs  dsl.rs  error.rs  executor.rs  lib.rs  lower.rs  message.rs  provider.rs  resolve.rs  session.rs  storage.rs  test_helpers.rs
acvus-orchestration/src/kind/: expr.rs  llm.rs  llm_cache.rs  mod.rs  plain.rs
acvus-orchestration/src/node/: display.rs  expr.rs  helpers.rs  iterator.rs  llm.rs  llm_cache.rs  mod.rs  plain.rs
acvus-orchestration/src/provider/: anthropic.rs  google.rs  mod.rs  openai.rs
acvus-orchestration/src/spec/: defaults.rs  mod.rs  namespace.rs
acvus-orchestration/tests/: e2e.rs
acvus-playground/: Dockerfile
acvus-playground/src/: index.html  main.rs
acvus-runtime/: Cargo.toml
acvus-runtime/src/: lib.rs  storage.rs  value.rs
acvus-utils/: Cargo.toml
acvus-utils/src/: astr.rs  coroutine.rs  id.rs  lib.rs  template.rs  tracked_deque.rs
acvus-utils/src/forked/: mod.rs  slot.rs
acvus-utils/tests/: macro_test.rs
acvus-web/src/: index.html
docs/: mir-architecture-for-compiler-engineer.md  mir-architecture.md
examples/: .gitignore
examples/budget-chat/: chat.toml
examples/chat/: chat.toml  system.acvus  user.acvus
examples/diamond-chat/: output.acvus  output.toml  sentiment.toml  sentiment_prompt.acvus  system.acvus  translate.toml  translate_prompt.acvus  user.acvus
examples/format-chat/: chat.toml  system.acvus  user.acvus
examples/inline-chat/: chat.toml
examples/multi-budget-chat/: chat.toml
examples/tool-chat/: chat.toml  get_weather.toml
examples/translate-chat/: chat.toml  output.acvus  system.acvus  translate_eng.toml  translate_kr.toml  translate_kr_prompt.acvus  user.acvus
kovac-interpreter/tests/: e2e.rs
pomollu-engine/: Cargo.toml
pomollu-engine/src/: config.rs  convert.rs  error.rs  fetch.rs  idb.rs  lib.rs  schema.rs  session.rs
pomollu-frontend/: .gitignore  Dockerfile  README.md  deploy.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
pomollu-frontend/src/: app.css
pomollu-frontend/static/: asset-sw.js
(+124 files in other folders)
