[workspace]
resolver = "3"
members = [
    "acvus-coroutine",
    "acvus-interpreter",
    "acvus-interpreter-test",
    "acvus-ast",
    "acvus-mir",
    "acvus-mir-pass",
    "acvus-mir-cli",
    "acvus-mir-test",
    "acvus-playground",
    "acvus-orchestration",
    "acvus-chat",
    "acvus-chat-cli",
    "acvus-ext",
    "pomollu-engine"
]

[profile.release]
opt-level = 'z'
lto = true