[package]
name = "acvus-chat-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
acvus-chat = { path = "../acvus-chat" }
acvus-ext = { path = "../acvus-ext" }
acvus-interpreter = { path = "../acvus-interpreter" }
acvus-mir = { path = "../acvus-mir" }
acvus-orchestration = { path = "../acvus-orchestration" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
