[package]
name = "acvus-interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
acvus-ast = { path = "../acvus-ast" }
acvus-mir = { path = "../acvus-mir" }
futures = "0.3"
rust_decimal = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
