[package]
name = "acvus-interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
acvus-ast = { path = "../acvus-ast" }
acvus-utils = { path = "../acvus-utils" }
acvus-mir = { path = "../acvus-mir" }
futures = "0.3"
parking_lot = "0.12"
rust_decimal = "1.40.0"
rustc-hash = { workspace = true }
smallvec = "1"
stackfuture = "0.3"
sync_wrapper = "1"
uuid = { workspace = true }
tracing = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
blake3 = "1"
trait-variant = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
