[package]
name = "acvus-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
acvus-ast = { path = "../acvus-ast" }
acvus-mir = { path = "../acvus-mir" }
acvus-utils = { path = "../acvus-utils" }
rustc-hash = { workspace = true }

[dev-dependencies]
acvus-ast = { path = "../acvus-ast" }
acvus-ext = { path = "../acvus-ext" }
acvus-mir = { path = "../acvus-mir" }
acvus-utils = { path = "../acvus-utils" }
rustc-hash = { workspace = true }
