[package]
name = "acvus-orchestration-test"
version = "0.1.0"
edition = "2024"

[dependencies]
acvus-utils = { path = "../acvus-utils" }
acvus-mir = { path = "../acvus-mir" }
acvus-interpreter = { path = "../acvus-interpreter" }
acvus-orchestration = { path = "../acvus-orchestration" }
rustc-hash = { workspace = true }
uuid = { workspace = true }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
