[package]
name = "acvus-orchestration"
version = "0.1.0"
edition = "2024"

[dependencies]
acvus-ast = { path = "../acvus-ast" }
acvus-mir = { path = "../acvus-mir" }
acvus-interpreter = { path = "../acvus-interpreter" }
acvus-mir-pass = { path = "../acvus-mir-pass" }
serde_json = "1"
futures = "0.3"
trait-variant = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
