[package]
name = "acvus-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
parking_lot = "0.12"
rustc-hash = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
serde_json = "1"
acvus-macro = { path = "../acvus-macro" }
acvus-ast = { path = "../acvus-ast" }
rustc-hash = { workspace = true }
