[package]
name = "pomollu-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
acvus-ast = { path = "../acvus-ast" }
acvus-mir = { path = "../acvus-mir" }
acvus-mir-pass = { path = "../acvus-mir-pass" }
acvus-interpreter = { path = "../acvus-interpreter" }
acvus-orchestration = { path = "../acvus-orchestration" }
acvus-chat = { path = "../acvus-chat" }
acvus-ext = { path = "../acvus-ext" }
acvus-coroutine = { path = "../acvus-coroutine" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Request", "RequestInit", "Response", "Headers", "Window", "console"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.3", features = ["wasm_js"] }
