[package]
name = "pomollu-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
acvus-ast = { path = "../acvus-ast" }
acvus-mir = { path = "../acvus-mir" }
acvus-interpreter = { path = "../acvus-interpreter" }
acvus-orchestration = { path = "../acvus-orchestration" }
acvus-chat = { path = "../acvus-chat" }
acvus-ext = { path = "../acvus-ext" }
acvus-lsp = { path = "../acvus-lsp" }
acvus-utils = { path = "../acvus-utils" }
rustc-hash = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Request", "RequestInit", "Response", "Headers", "Window", "console",
    "IdbFactory", "IdbOpenDbRequest", "IdbDatabase", "IdbTransaction",
    "IdbTransactionMode", "IdbObjectStore", "IdbRequest", "DomStringList",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
rust_decimal = { version = "1", features = ["serde-with-arbitrary-precision"] }
uuid = { workspace = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
tsify = { git = "https://github.com/madonoharu/tsify", rev = "d89d5c1d16a83c0370109232c9197fc2fa072564", default-features = false, features = ["js"] }
serde-wasm-bindgen = "0.6"
